# convert-buddy

./: .gitignore  ARCHITECTURE.md  ENHANCEMENT_SUMMARY.md  IMPLEMENTATION.md  PERFORMANCE_GUARDRAILS_SUMMARY.md  PERFORMANCE_IMPROVEMENTS.md  QUICKSTART.md  README.md  SUMMARY.md  TESTING.md  TEST_ENHANCEMENTS.md  TEST_STRATEGY.md  VERIFICATION_CHECKLIST.md  analyze-lines.js  package-lock.json  package.json  test-auto-detection.js  test-data.json  test-data.ndjson  test-detect-structure.js  test-detection-debug.js  test-ndjson-json-conversion.js  test-sample.json  test-sample.ndjson  test-sample.xml  test-unified-detection.js  test-xml-convertToString.js  test-xml-debug.js  test-xml-detailed.js
.github/workflows/: benchmark-100mb.yml  benchmark.yml
apps/web/: .gitignore  SAMPLES.md  ideas.md  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo  vite.config.ts  wrangler.jsonc
apps/web/app/: globals.css  layout.tsx  mdx-components.tsx  page.tsx
apps/web/app/convert/: page.tsx
apps/web/app/convert/[conversion]/: page.tsx
apps/web/app/convert/detect/: page.tsx
apps/web/app/convert/samples/: route.ts
apps/web/app/developers/: page.tsx
apps/web/app/docs/: content.mdx  layout.tsx  mdx-provider.tsx  page.mdx  page.tsx
apps/web/app/docs/api/browser/: content.mdx  page.mdx  page.tsx
apps/web/app/docs/api/browser-helpers/: page.tsx
apps/web/app/docs/api/choosing/: page.tsx
apps/web/app/docs/api/instance/: content.mdx  page.mdx  (+1 more)
apps/web/app/docs/faq/: page.mdx  page.tsx
apps/web/app/docs/getting-started/: page.mdx  page.tsx
apps/web/app/docs/what-it-is/: page.tsx
apps/web/app/legal/: page.tsx
apps/web/app/workers/: convert-worker.ts
apps/web/client/: index.html
apps/web/client/public/: convert-buddy-streaming-worker.js
apps/web/client/src/: App.tsx  index.css
apps/web/client/src/components/: BenchmarkSection.tsx  FileCompletionToast.tsx  FileUploadZone.tsx  FileWarningToast.tsx  Footer.tsx  FormatDetection.tsx  LiveBenchmarkSection.tsx  ParserComparison.tsx  ParserDetailsCollapsible.tsx  StreamingBenchmark.tsx  StreamingProcessor.tsx
apps/web/client/src/lib/: benchmarkParsers.ts  formatBytes.ts  streamingProcessor.ts  wasmPreloader.ts
apps/web/client/src/pages/: Home.tsx
apps/web/client/src/workers/: conversionWorker.ts
apps/web/components/: AdBanner.tsx  GridAnimator.tsx  SiteFooter.tsx  SiteHeader.tsx
apps/web/components/converter/: CommandCenter.tsx  ConversionCard.tsx  ConverterWidget.tsx  DetectionWidget.tsx  TransformEditor.tsx
apps/web/components/mdx/: CodeBlock.tsx  DocsSidebar.tsx  DynamicMdx.tsx  MDXComponents.tsx  Playground.tsx  Pre.tsx  Sandpack.tsx  SandpackImplementation.tsx  StackBlitzDemo.tsx
apps/web/components/ui/: Badge.tsx  Button.tsx  Card.tsx  SectionHeading.tsx  Stat.tsx
apps/web/lib/: conversions.ts  convert-buddy.ts  docs-navigation.ts  utils.ts  wasm-stub.ts  wasm.ts
apps/web/pages/: _document.tsx
apps/web/public/samples/: dnd_characters.csv  dnd_characters.json  dnd_characters.ndjson  dnd_characters.xml
apps/web/src/types/: sandpack-react.d.ts
crates/convert-buddy/: Cargo.toml  build.rs  cargo-llvm-cov.toml  test_output.txt
crates/convert-buddy/.cargo/: config.toml
crates/convert-buddy/examples/: debug_xml.rs
crates/convert-buddy/src/: buffer_pool.rs  converter_tests.rs  csv_parser.rs  csv_parser_tests.rs  csv_writer.rs  detect.rs  detect_tests.rs  error.rs  format.rs  json_parser.rs  lib.rs  ndjson_parser.rs  ndjson_parser_tests.rs  stats.rs  stats_tests.rs  timing.rs  timing_tests.rs  transform.rs  transform_tests.rs  wasm_roundtrip_tests.rs  xml_parser.rs  xml_parser_tests.rs
scripts/: generate-large-dataset.js  local_test_convert.js
(+79 files in other folders)
