[package]
name = "convert-buddy"
version = "0.1.0"
edition = "2021"
description = "High-performance streaming converters (CSV/XML/JSON/NDJSON) core"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Feature gates for performance / platform capability
simd = []
threads = []         # WASM threads: only when the host supports it (SharedArrayBuffer)
debug-logs = []      # very verbose logs and internal instrumentation

[dependencies]
wasm-bindgen = "0.2"
js-sys = "0.3"

# Logging (WASM-friendly)
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"

# (Later) format parsers:
# csv = "1"
# quick-xml = "0.36"
# simd-json = { version = "0.13", optional = true }  # example; validate later for wasm support

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
