[package]
name = "convert-buddy"
version = "0.1.0"
edition = "2021"
description = "High-performance streaming converters (CSV/XML/JSON/NDJSON) core"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Feature gates for performance / platform capability
default = []
simd = ["simd-json"]
threads = []         # WASM threads: only when the host supports it (SharedArrayBuffer)
debug-logs = []      # very verbose logs and internal instrumentation

[dependencies]
wasm-bindgen = "=0.2.99"
js-sys = "=0.3.76"
web-sys = { version = "=0.3.76", features = ["Performance"] }

# Logging (WASM-friendly)
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"

# JSON parsing - Mode B (high-performance) with Mode A fallback
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
simd-json = { version = "0.13", optional = true }

# CSV parsing
csv = "1.3"
memchr = "2.7"

# XML parsing
quick-xml = "0.36"

# Utilities
thiserror = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3
