[package]
name = "convert-buddy"
version = "0.1.0"
edition = "2021"
description = "High-performance streaming converters (CSV/XML/JSON/NDJSON) core"
license = "MIT"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# Feature gates for performance / platform capability
default = ["threads"]  # Enable WASM/native threading by default (no simd)
simd = ["simd-json"]
threads = ["rayon", "num_cpus"]  # Base threading support
threads-nodejs = ["threads", "wasm-bindgen-rayon"]  # Node.js WASM threading
threads-web = ["threads"]  # Web custom JS threading
debug-logs = []      # very verbose logs and internal instrumentation

[dependencies]
wasm-bindgen = "=0.2.99"
js-sys = "=0.3.76"
web-sys = { version = "=0.3.76", features = ["Performance"] }

# Logging (WASM-friendly)
log = "0.4"
console_log = "1.0"
console_error_panic_hook = "0.1"

# JSON parsing - Mode B (high-performance) with Mode A fallback
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"
simd-json = { version = "0.13", optional = true }

# CSV parsing
csv = "1.3"
memchr = "2.7"

# XML parsing
quick-xml = "0.36"

# Arena allocator used by XML parser
bumpalo = "3"

# Fast byte counting used in parallel CSV processing
bytecount = "0.6"

# Utilities
thiserror = "1.0"

# Parallel processing
rayon = { version = "1.8", optional = true }
wasm-bindgen-rayon = { version = "1.2", optional = true } # For Node.js WASM threading
num_cpus = { version = "1.16", optional = true }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = 3
